# mcp-instaloader

./: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agent-memory/komodo-infra/: MEMORY.md  feedback_komodo_env_newlines.md  project_mcp_auth_oidcproxy.md  reference_instaloader_komodo_status.md
.github/: dependabot.yml
.github/workflows/: release.yml
src/: __init__.py  server.py
src/mcp_instaloader/: __main__.py  auth.py  config.py  instaloader_client.py  rate_limiter.py  server.py  update_checker.py  url_parser.py
tests/: conftest.py  test_config.py  test_instaloader_client.py  test_integration.py  test_mcp_tools.py  test_rate_limiter.py  test_update_checker.py  test_url_parser.py
