[project]
name = "mcp-instaloader"
version = "0.2.8"
description = "MCP server for fetching Instagram posts and reels using instaloader"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CaseyRo"}
]
keywords = ["mcp", "fastmcp", "instagram", "instaloader"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp>=3.2.4",
    "instaloader>=4.10",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "PyJWT>=2.12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.urls]
"Homepage" = "https://github.com/CaseyRo/mcp-instaloader"
"Bug Tracker" = "https://github.com/CaseyRo/mcp-instaloader/issues"

[project.scripts]
mcp-instaloader = "mcp_instaloader.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_instaloader"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

